--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.50.0
-torch==2.8.0+cu126
-numpy==2.0.2
-Pillow==11.3.0
-opencv-python==4.12.0
-albumentations==2.0.8
-
-
+streamlit==1.30.0
+torch==2.1.0
+numpy==1.26.4
+Pillow==10.2.0
+opencv-python==4.9.0.80
+albumentations==1.4.0
+reportlab==4.1.0
