--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.30.0
 torch==2.8.0
 numpy==1.26.4
-Pillow==10.2.0
-opencv-python==4.9.0.80
+pillow>=10.3.0
+opencv-python-headless==4.9.0.80
 albumentations==1.4.0
 reportlab==4.1.0
