--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit==1.30.0
+
 torch==2.1.1
 torchvision==0.16.1
+
 numpy==1.26.4
-pillow>=10.3.0
+pillow==10.2.0
 opencv-python-headless==4.9.0.80
 albumentations==1.3.1
 reportlab==4.1.0
